retrieveUnpackaged/objects/Award__c.object
<CustomObject>
    <fields>
        <fullName>Amendment_Reason__c</fullName>
        <description>Reason for Amendment.</description>
        <label>Amendment Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amendment_Type__c</fullName>
        <description>Value comes from Application object.</description>
        <formula>TEXT( Application_ID__r.Option__c )</formula>
        <label>Amendment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amendment__c</fullName>
        <description>Amendment # for Amendment awards.</description>
        <label>Amendment #</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Application ID related to Award.</description>
        <label>Application ID</label>
        <referenceTo>Application3__c</referenceTo>
        <relationshipLabel>Award</relationshipLabel>
        <relationshipName>Award</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Type of Application coming from Application object.</description>
        <formula>if(ispickval(Application_ID__r.Type_of_Application__c, &quot;New&quot;), &quot;New&quot;, 
if(ispickval(Application_ID__r.Type_of_Application__c, &quot;Continuation&quot;), &quot;Continuation&quot;,
if(ispickval(Application_ID__r.Type_of_Application__c, &quot;Amendment&quot;), &quot;Amendment&quot;,&quot;None&quot;
) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Amount__c</fullName>
        <description>Approved amount coming from Application Recommended  Award Amount field.</description>
        <formula>Application_ID__r.Recommended_Award_Amount__c</formula>
        <label>Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Number__c</fullName>
        <description>This field is used for Grant #. KY</description>
        <displayFormat>{000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Awaiting_SGO_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Awaiting SGO Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Award_Description__c</fullName>
        <description>Detailed description of Award.</description>
        <label>Award Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Award_Flow__c</fullName>
        <description>Field determines the Approval process flow. KY</description>
        <formula>IF(AND(ISPICKVAL(Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c,&quot;Yes&quot;),
ISPICKVAL(Application_ID__r.NOFA_RFP__r.Cooperative_Agreement__c, &quot;No&quot;)), &quot;Flow 1&quot;, 

IF(AND(ISPICKVAL(Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c,&quot;Optional&quot;),OR(ISPICKVAL(Application_ID__r.Program_Type__c,&quot;Support Grant&quot;),
ISPICKVAL(Application_ID__r.Program_Type__c,&quot;Program Grant&quot;)),ISPICKVAL(Application_ID__r.NOFA_RFP__r.Cooperative_Agreement__c, &quot;No&quot;)), &quot;Flow 2&quot;, 

IF(AND(ISPICKVAL(Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c,&quot;Yes&quot;),
ISPICKVAL(Application_ID__r.NOFA_RFP__r.Cooperative_Agreement__c, &quot;Yes&quot;)), &quot;Flow 4&quot;, 

IF(AND(ISPICKVAL(Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c,&quot;No&quot;),
ISPICKVAL(Application_ID__r.NOFA_RFP__r.Cooperative_Agreement__c, &quot;No&quot;)), &quot;Flow 6-1&quot;, 

IF(AND(ISPICKVAL(Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c,&quot;Optional&quot;),ISPICKVAL(Application_ID__r.Program_Type__c,&quot;Standard&quot;),
ISPICKVAL(Application_ID__r.NOFA_RFP__r.Cooperative_Agreement__c, &quot;No&quot;)), &quot;Flow 6-2&quot;, &quot;&quot;)))))</formula>
        <label>Award Flow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Being_Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as a flag to verify if an Award has been previously committed. 
For SPO actions. (KY)</description>
        <label>Being Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Period_End__c</fullName>
        <description>Field related to Budget information.</description>
        <label>Budget Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Period_Start__c</fullName>
        <description>Field related to Budget information.</description>
        <label>Budget Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CNCS_Corporate_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CNCS Corporate Program</label>
        <referenceTo>CNCS_Corporate_Program__c</referenceTo>
        <relationshipLabel>Award</relationshipLabel>
        <relationshipName>Award</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this flag when the Award is Being Committed. KY</description>
        <label>Committed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Program1__c</fullName>
        <formula>Application_ID__r.NOFA_RFP__r.CNCS_Corporate_Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Program</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Award</relationshipLabel>
        <relationshipName>Award</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demonstrates_Ethics_Integrity__c</fullName>
        <description>Req - 1783. Created on 10/29/2015</description>
        <label>Demonstrates Ethics &amp; Integrity</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Executive_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Award4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAPIIS_Review_Comments__c</fullName>
        <description>Req - 1783. Created on 10/29/2015</description>
        <label>FAPIIS Review Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAPIIS_Review_Date__c</fullName>
        <description>Req-1783. Created on 10/29/2015</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund_Commitment_Comments__c</fullName>
        <label>Fund Commitment Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GO_Email__c</fullName>
        <description>Grant officer email for Email Template. User Story # 1007.</description>
        <label>GO Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Grant_Number__c</fullName>
        <description>US # 2415</description>
        <formula>RIGHT(TEXT( Application_ID__r.NOFA_RFP__r.Fiscal_Yr__c ),2)+
 Application_ID__r.NOFA_RFP__r.CNCS_Corporate_Program__r.Short_Code__c</formula>
        <label>FAIN(FederalAward Identification Number)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Performance_Period_End__c</fullName>
        <description>Cash Grant Award = Yes; Program Type = Program or Support</description>
        <formula>Application_ID__r.Proposed_End_Date__c</formula>
        <label>Grant Performance Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Performance_Period_Start__c</fullName>
        <description>Cash Grant Award = Yes; Program Type = Program or Support</description>
        <formula>Application_ID__r.Proposed_Start_Date__c</formula>
        <label>Grant Performance Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Status__c</fullName>
        <label>Grant Status</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting GO Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting PO Certification</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting SGO Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting SPO Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Organization e-Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting XO CSHR Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Being Committed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obligated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned for Re-Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Being Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting SPO Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting SGO Obligation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting SGO Award</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <description>US # 2415</description>
        <label>FAIN(FederalAward Identification Number)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grants_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grants Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Award3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Information_Available__c</fullName>
        <description>Req - 1783. Created on 10/29/2015</description>
        <label>Information Available ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Master_Corporate_Program__c</fullName>
        <formula>Corporate_Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Corporate Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Status__c</fullName>
        <label>Match Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_of_sub_budgets_per_application__c</fullName>
        <formula>Application_ID__r.NOFA_RFP__r.Max_of_Sub_Budgets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max # of sub-budgets per application</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mitigating_Circumstances__c</fullName>
        <description>Req - 1783. Created on 10/29/2015</description>
        <label>Mitigating Circumstances</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NOFA_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOFA Name</label>
        <referenceTo>NOFA__c</referenceTo>
        <relationshipLabel>Award</relationshipLabel>
        <relationshipName>Award</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Obligated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Award Approvals.</description>
        <label>Obligated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_Legal_Name__c</fullName>
        <formula>Application_ID__r.Legal_Name__c</formula>
        <label>Organization Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Award</relationshipLabel>
        <relationshipName>Award</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization_re_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked through a Workflow rule when the Status changes from Awaiting PO Certification to Awaiting Organization eSignature for the first time. Field not shown on Layout. (KY)</description>
        <label>Organization re-Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Certification_Date__c</fullName>
        <description>Field to populate the date when the PO takes action on Award record.</description>
        <label>PO Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Comments__c</fullName>
        <label>PO Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <description>Field to populate the PO Name who took action on Award record.</description>
        <label>PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field obsolete, Can be deleted.</description>
        <label>PO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Award5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Award</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program_Name__c</referenceTo>
        <relationshipLabel>Award</relationshipLabel>
        <relationshipName>Award</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <description>Field name was changed from &quot;Project End Date&quot; to &quot;Agreement Period End&quot; on 9.15.15_Krishna Yama.
Cash Grant Award = No; Program Type = Standard</description>
        <formula>Application_ID__r.Proposed_End_Date__c</formula>
        <label>Agreement Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Application_ID__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <description>Field name was changed from &quot;Project Start Date&quot; to &quot;Agreement Period Start&quot; on 9.15.15_Krishna Yama.
Cash Grant Award = No; Program Type = Standard</description>
        <formula>Application_ID__r.Proposed_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Red_Flag_Count__c</fullName>
        <formula>Organization__r.Red_Flag_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Flag Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Red_Flags__c</fullName>
        <formula>IMAGE( IF(Red_Flag_Count__c &gt; 0, &quot;img/samples/flag_red.gif&quot;,&quot;img/samples/flag_green.gif&quot; ),&quot;&quot;, 20, 20 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Flags</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPO_Certification_Date__c</fullName>
        <description>Field to populate the date when SPO takes action on Award record.</description>
        <label>SPO Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SPO__c</fullName>
        <description>Field to populate the SPO Name who took action on Award record.</description>
        <label>SPO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Satisfactory_Record_Executing_Programs__c</fullName>
        <description>Req - 1783. Created on 10/29/2015</description>
        <label>Satisfactory Record Executing Programs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Senior_Grants_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Senior Grants Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Award1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Senior_Program_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Senior Program Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Award2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Conditions__c</fullName>
        <label>Special Conditions</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sponsor_e_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applicant should check this checkbox before Signing the Agreement.</description>
        <label>Sponsor e-Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_CLR_Code__c</fullName>
        <description>Used for Grant #.</description>
        <formula>IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;CA&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;WA&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;AK&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;HI&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;ID&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;MT&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;NV&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;OR&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;UT&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;WY&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;GU&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;AS&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;MP&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;PA&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;NJ&quot;) , &quot;A&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;ME&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;NH&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;RI&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;CT&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;VT&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;MA&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;DE&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;MD&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;PR&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;VI&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;DC&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;IL&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;OH&quot;) , &quot;N&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;WI&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;IN&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;IA&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;MI&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;MN&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;NE&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;SD&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;ND&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;FL&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;GA&quot;) , &quot;S&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;AL&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;MS&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;TN&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;SC&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;KY&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;WV&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;VA&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;NC&quot;) , &quot;S&quot;,
&quot;W&quot;))))))))))))))))))))))))))))))))))))))))))))))</formula>
        <label>State CLR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_budgets_for_multi_year_grants__c</fullName>
        <formula>TEXT(Application_ID__r.NOFA_RFP__r.Sub_Budgets_for_Multi_Year_Grants__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-budgets for multi-year grants</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_to_FAPIIS_Review__c</fullName>
        <label>Subject to FAPIIS Review</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>XO_CSHR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSHR Executive Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Award6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year_of_Grant__c</fullName>
        <formula>Application_ID__r.Year_of_Grant__c</formula>
        <label>Year of Grant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eSigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Award approvals.</description>
        <label>eSigned?</label>
        <type>Checkbox</type>
    </fields>
    <label>Award</label>
    <listViews>
        <fullName>Test_Awards</fullName>
        <columns>NAME</columns>
        <columns>Grant_Status__c</columns>
        <columns>Award_Flow__c</columns>
        <columns>Application_Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>8/27/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Cash</value>
        </filters>
        <label>Test Awards</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Award Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Award</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Award_Name</fullName>
        <active>true</active>
        <description>Applicant cannot change Award Name.</description>
        <errorConditionFormula>AND(ISCHANGED( Name ),  $Profile.Name = &apos;Applicant&apos;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You cannot edit the Award Name.</errorMessage>
    </validationRules>
</CustomObject>